<resources>
    <string name="app_name">Dreamcatcher</string>
    <string name="hello_world">Hello, world</string>
    <string name="preferences_title">Configure your dreamcatcher</string>
    <string name="preference_enabled">Enabled</string>
    <string name="preference_enabled_summary">Send a power off command to the Harmony Hub some time after daydream started</string>
    <string name="preference_delay">Day Dream duration</string>
    <string name="preference_delay_summary">Daydream for up to %1$dm.</string>
    <string name="preference_address">Harmony Hub Address</string>
    <string name="preference_address_dialog_title">Host name or address of the Harmony Hub</string>
    <string name="preference_address_summary">Connect to the Harmony XMPP service on %1$s</string>
    <string name="preference_test">Test Connection</string>
    <string name="preference_test_summary">Try to connect to <i>%1$s</i>, without actually sending any commands.</string>
    <string name="preference_test_ok_summary">Connection to <i>%1$s</i> <b>OK</b></string>
    <string name="preference_test_fail_summary">Connection to <i>%1$s</i> <b>FAILED</b>. Make sure that address is correct and that XMPP is enabled on the Harmony Hub.</string>
    <string name="preference_poweroff">Power Off NOW</string>
    <string name="preference_poweroff_summary">Send a power off command to the Harmony Hub.</string>
    <string name="harmony_hub">the Harmony Hub</string>
    <string name="testing_connection">Connecting...</string>
    <string name="powering_off">Powering off...</string>
    <string name="progress_cancelled">Cancelled</string>
    <string name="progress_succeeded">OK</string>
    <string name="progress_failed">Failed</string>
    <string name="delay_default">10</string>
</resources>