<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/preferences_title">
    <SwitchPreference
        android:defaultValue="@bool/enabled_default"
        android:key="enabled"
        android:title="@string/preference_enabled"
        android:summary="@string/preference_enabled_summary"
        android:iconSpaceReserved="true" />
    <ListPreference
        android:defaultValue="@string/delay_default"
        android:entries="@array/preference_delay"
        android:entryValues="@array/preference_delay_values"
        android:key="delay"
        android:title="@string/preference_delay"
        android:icon="@drawable/ic_access_time" />
    <ListPreference
        android:key="hub"
        android:title="@string/preference_hub"
        android:icon="@drawable/ic_stat_computer"
        android:summary="@string/preference_hub_summary" />
    <net.gmx.szermatt.dreamcatcher.TestResultPreference
        android:key="test"
        android:title="@string/preference_test"
        android:icon="@drawable/ic_record_voice_over" />
    <Preference
        android:key="powerOff"
        android:title="@string/preference_poweroff"
        android:icon="@drawable/ic_power_settings_new"
        app:summary="@string/preference_poweroff_summary" />
</PreferenceScreen>